--- a/src/TabTip.Avalonia.Windows/TabTip.Avalonia.Windows.csproj
+++ b/src/TabTip.Avalonia.Windows/TabTip.Avalonia.Windows.csproj
@@ -6,4 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\TabTip.Avalonia\TabTip.Avalonia.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Avalonia" Version="11.2.1" />
+    </ItemGroup>
+
 </Project>
