--- a/src/TabTip.Avalonia/TabTip.Avalonia.csproj
+++ b/src/TabTip.Avalonia/TabTip.Avalonia.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Avalonia" Version="11.2.1" />
+      <PackageReference Include="System.Reactive" Version="6.0.1" />
+    </ItemGroup>
+
 </Project>
