--- a/src/TabTip.Avalonia/TabTip.Avalonia.csproj
+++ b/src/TabTip.Avalonia/TabTip.Avalonia.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Avalonia" Version="11.2.1" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
       <PackageReference Include="System.Reactive" Version="6.0.1" />
     </ItemGroup>
 
