--- a/src/TabTip.Avalonia/TabTip.Avalonia.csproj
+++ b/src/TabTip.Avalonia/TabTip.Avalonia.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Avalonia" Version="11.3.*" />
+      <PackageReference Include="Avalonia" Version="11.3" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
       <PackageReference Include="System.Reactive" Version="6.0.1" />
     </ItemGroup>
