--- a/demo/Demo/Demo.csproj
+++ b/demo/Demo/Demo.csproj
@@ -19,4 +19,8 @@
         </PackageReference>
         <PackageReference Include="System.Reactive" Version="6.0.1" />
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\TabTip.Avalonia\TabTip.Avalonia.csproj" />
+    </ItemGroup>
 </Project>
