--- a/src/TabTip.Avalonia/TabTip.Avalonia.csproj
+++ b/src/TabTip.Avalonia/TabTip.Avalonia.csproj
@@ -55,7 +55,7 @@
     </PropertyGroup>
 
     <ItemGroup Label="PackageIcon" Condition="'$(ProjectName.EndsWith(`Test`))' == 'false'">
-        <None Include="$(MSBuildThisFileDirectory)/../README.md" Pack="true" Visible="false" PackagePath="" />
+        <None Include="$(MSBuildThisFileDirectory)/../../README.md" Pack="true" Visible="false" PackagePath="" />
     </ItemGroup>
 
 </Project>
