--- a/src/TabTip.Avalonia/TabTip.Avalonia.csproj
+++ b/src/TabTip.Avalonia/TabTip.Avalonia.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Avalonia" Version="11.3" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+      <PackageReference Include="System.Management" Version="6.0.0" />
       <PackageReference Include="System.Reactive" Version="6.0.1" />
     </ItemGroup>
 
